--- a/exams/universidad-uam-2025.html
+++ b/exams/universidad-uam-2025.html
@@ -20,38 +20,7 @@
             const examData = {
   "title": "Examen Universidad UAM 2025",
   "numberOfOptions": 5,
-  "sections": [
-    {
-      "title": "Matemáticas",
-      "start": 1,
-      "end": 20
-    },
-    {
-      "title": "Física",
-      "start": 21,
-      "end": 40
-    },
-    {
-      "title": "Química",
-      "start": 41,
-      "end": 60
-    },
-    {
-      "title": "Biología",
-      "start": 61,
-      "end": 80
-    },
-    {
-      "title": "Historia Universal",
-      "start": 81,
-      "end": 100
-    },
-    {
-      "title": "Geografía",
-      "start": 101,
-      "end": 120
-    }
-  ],
+  "sections": [{"title": "Matemáticas", "start": 1, "end": 20}, {"title": "Física", "start": 21, "end": 40}, {"title": "Química", "start": 41, "end": 60}, {"title": "Biología", "start": 61, "end": 80}, {"title": "Historia Universal", "start": 81, "end": 100}, {"title": "Geografía", "start": 101, "end": 120}],
   "correctAnswers": ["A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E", "A", "B", "C", "D", "E"],
   "numberOfQuestions": 120
 };
