Add real yaml files

--- a/index.html
+++ b/index.html
@@ -22,26 +22,82 @@
             <div class='exam-grid'>
                 
                 <div class='exam-card'>
-                    <h3>Examen Universidad IPN 2025</h3>
-                    <a href='exams/universidad-ipn-2025.html' class='btn'>Comenzar Examen</a>
+                    <h3>IPN-2019-FMI</h3>
+                    <a href='exams/universidad-ipn-2019-fmi.html' class='btn'>Comenzar Examen</a>
                 </div>
                 <div class='exam-card'>
-                    <h3>Examen Universidad UAM 2025</h3>
-                    <a href='exams/universidad-uam-2025.html' class='btn'>Comenzar Examen</a>
+                    <h3>IPN-2020</h3>
+                    <a href='exams/universidad-ipn-2020.html' class='btn'>Comenzar Examen</a>
                 </div>
                 <div class='exam-card'>
-                    <h3>Examen Universidad UNAM 2025</h3>
-                    <a href='exams/universidad-unam-2025.html' class='btn'>Comenzar Examen</a>
+                    <h3>UAM-2011-CBI</h3>
+                    <a href='exams/universidad-uam-2011-cbi.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UAM-simulacion-FMI</h3>
+                    <a href='exams/universidad-uam-simulacion-fmi.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2012-3</h3>
+                    <a href='exams/universidad-unam-2012-3.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2015-2</h3>
+                    <a href='exams/universidad-unam-2015-2.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2018-area3</h3>
+                    <a href='exams/universidad-unam-2018-area3.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2019-1</h3>
+                    <a href='exams/universidad-unam-2019-1.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2019-3</h3>
+                    <a href='exams/universidad-unam-2019-3.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2020-3</h3>
+                    <a href='exams/universidad-unam-2020-3.html' class='btn'>Comenzar Examen</a>
                 </div>
             </div>
         </div>
         <div class='category'>
-            <h2>🏫 Exámenes Bachillerato</h2>
+            <h2>📝 Exámenes de Práctica</h2>
             <div class='exam-grid'>
                 
                 <div class='exam-card'>
-                    <h3>Examen Bachillerato COMIPEMS 2025</h3>
-                    <a href='exams/bachillerato-comipems-2025.html' class='btn'>Comenzar Examen</a>
+                    <h3>UNAM-2009</h3>
+                    <a href='exams/comipems-unam-2009.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2012</h3>
+                    <a href='exams/comipems-unam-2012.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2013</h3>
+                    <a href='exams/comipems-unam-2013.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2016</h3>
+                    <a href='exams/comipems-unam-2016.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2017</h3>
+                    <a href='exams/comipems-unam-2017.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2019</h3>
+                    <a href='exams/comipems-unam-2019.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-2020</h3>
+                    <a href='exams/comipems-unam-2020.html' class='btn'>Comenzar Examen</a>
+                </div>
+                <div class='exam-card'>
+                    <h3>UNAM-simulacion</h3>
+                    <a href='exams/comipems-unam-simulacion.html' class='btn'>Comenzar Examen</a>
                 </div>
             </div>
         </div>
