Correctly categorized exams

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class='category'>
-            <h2>📝 Exámenes de Práctica</h2>
+            <h2>🏫 Exámenes Bachillerato</h2>
             <div class='exam-grid'>
                 
                 <div class='exam-card'>
