Correctly rename exam base in previous conventions

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <a href='exams/universidad-uam-2011-cbi.html' class='btn'>Comenzar Examen</a>
                 </div>
                 <div class='exam-card'>
-                    <h3>Universidad UAM simulacion FMI</h3>
-                    <a href='exams/universidad-uam-simulacion-fmi.html' class='btn'>Comenzar Examen</a>
+                    <h3>Universidad UAM simulacion CAD</h3>
+                    <a href='exams/universidad-uam-simulacion-cad.html' class='btn'>Comenzar Examen</a>
                 </div>
                 <div class='exam-card'>
                     <h3>Universidad UNAM 2012 3</h3>
